[Coverity] Address some uninitialized constructor values. https://bugs.webkit.org/show_bug.cgi?id=82376

Patch by Kausalya Madhusudhanan <kmadhusu@chromium.org> on 2012-03-27
Reviewed by James Robinson.

Source/WebCore:

New tests are not required since I did not modify any code behavior.

* html/shadow/MediaControlRootElementChromium.cpp:
(WebCore::MediaControlRootElementChromium::MediaControlRootElementChromium):
* inspector/InspectorIndexedDBAgent.h:
(InspectorIndexedDBAgent):
* inspector/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::InspectorTimelineAgent):
* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::ScrollingCoordinator::ScrollingCoordinator):
* platform/ScrollAnimatorNone.cpp:
(WebCore::ScrollAnimatorNone::ScrollAnimatorNone):
* platform/chromium/DataTransferItemChromium.cpp:
(WebCore::DataTransferItemChromium::DataTransferItemChromium):
* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::ImageBuffer::ImageBuffer):
* storage/StorageTask.cpp:
(WebCore::StorageTask::StorageTask):

Source/WebKit/chromium:

New tests are not required since I did not modify any code behavior. I just initialized the class member variables in the constructor.

* src/WebCompositorInputHandlerImpl.cpp:
(WebCore::PlatformGestureToCCGestureAdapter::PlatformGestureToCCGestureAdapter):

Canonical link: https://commits.webkit.org/99765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112343 268f45cc-cd09-0410-ab3c-d52691b4dbfc