Source/WebCore/html/shadow/MediaControlRootElementChromium.cpp
@@ -58,6 +58,7 @@ MediaControlRootElementChromium::MediaControlRootElementChromium(Document* docum
     , m_panel(0)
 #if ENABLE(VIDEO_TRACK)
     , m_textDisplayContainer(0)
+    , m_textTrackDisplay(0)
 #endif
     , m_opaque(true)
     , m_isMouseOverControls(false)
